package JUZGADO;

import java.io.Serializable;

public class Atenuante extends Circunstancia implements Serializable{

    public Atenuante(int valor, String num_exp) {
        super(valor, num_exp);
    }

    
    
}
