@startuml
skinparam ClassAttributeIconSize 0

class GUI_JUZGADO

class Expediente{
    -numero: String
    -anno: int
    -delito: String
    -estimacion: int
    -autor: String
    -victima: String
    -pena: int

    +Expediente(String numero, int anno, String delito, int estimacion, String autor, String victima)
    +getNumero(): String
    +getAnno(): int
    +getDelito(): String
    +getEstimacion(): int
    +getAutor(): String
    +getVictima(): String
    +getPena(): int
    +setAnno(int anno): void
    +setAutor(String autor): void
    +setVictima(String victima): void
    +setPena(int pena): void
}

class Autor{
    -nombre: String
    -edad: int
    -numExp: String
    -animos_lucro: String
    -antecedentes_penales: String
    -arrepentimiento: String
    -concepto_vecinal: String
    -educacion: String
    -trabajo: String
    -venganza: String

    +Autor(String animos_lucro, String antecedentes_penales, String arrepentimiento, String concepto_vecinal, String educacion, String trabajo, String venganza, String nombre, int edad, String numExp)
    +setNombre(nombre: String): void
    +getNombre(): String
    +getNumExp(): String
}

class Victima
class Hecho
abstract class Circunstancia
class Agravante
class Atenuante

interface Serializable

Circunstancia <|-- Agravante
Circunstancia <|-- Atenuante
Expediente "1" *-- "0...*" Circunstancia
Expediente "1" *-- "1" Autor
Expediente "1" *-- "1" Victima
Expediente "1" *-- "1" Hecho
GUI_JUZGADO "1" *-- "0...*" Expediente
Hecho "1" *--* "1" Autor
Victima "1" *--* "1" Autor
Victima "1" *--* "1" Hecho
Circunstancia "1" *--* "1" Autor
Circunstancia "1" *--* "1" Victima
Circunstancia "1" *--* "1" Hecho
Expediente <.. Serializable
Autor <.. Serializable
Victima <.. Serializable
Hecho <.. Serializable
Agravante <.. Serializable
Atenuante <.. Serializable

@enduml